tests/positive/basic/formatdate_extended/input.ci
void main(string[] args) {
    int ts = makeEpoch(2025, 3, 11, 14, 32, 7);
    print(formatDate(ts, "w") + "\n");
    print(formatDate(ts, "z") + "\n");
    print(formatDate(ts, "W") + "\n");
    print(formatDate(ts, "c") + "\n");
}
