tests/negative/runtime/padleft_negative_width/input.ci
void main(string[] args) {
    print(padLeft("x", -1, " ") + "\n");
}
